# magic-recall

./: Cargo.toml  LICENSE
docs/: Design.md  Networking.md  Roadmap.md
src/: Readme.md  magic_ether.rs  main.rs
src/magic_ether/: magic_ether.rs  mod.rs
