[package]
name = "magic-recall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.50", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
futures = "0.3.26"
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.1.4", features = ["derive"] }
rand = "0.8"
futures-timer = "3.0"
void = "1.0"
oneshot = "0.1.5"
anyhow = "1.0"
